--- a/style/index.css
+++ b/style/index.css
@@ -2,9 +2,6 @@
 @import "fonts.css";
 @import "reset.css";
 @import "header.css";
-/* *{
-    border:1px solid black;
-} */
 
 /* main */
 /* main introduction */
@@ -26,15 +23,27 @@
     width: 100%;
 }
 /* main projects */
+
 .projects{
+    width:100%;
     display:flex;
     justify-content: space-evenly;
+    align-items: center;
 }
 .projects div{
     flex-basis: 100%;
+    height:100%;
 }
 .projects .projects-description{
-    padding:2%;
+    padding:1.5%;
+    margin:auto;
+    height:35vh;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.projects .projects-description p{
+    font-size:2vw;
 }
 .projects img{
     display:block;
